// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Interact content events Should map to a page scroll event when the interaction type is scroll and target is document.body 1`] = `
Array [
  Array [
    "event",
    "scroll",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "percent_scrolled": 25,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Newsletter events should track multiple gender event 1`] = `
Array [
  Array [
    "event",
    "sign_up_newsletter",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "newsletter_gender": "Woman,Man",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
  Array [
    "event",
    "sign_up_newsletter",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "newsletter_gender": "WOMAN,MAN",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
  Array [
    "event",
    "sign_up_newsletter",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "newsletter_gender": "Woman,Man",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Newsletter events should track single gender event 1`] = `
Array [
  Array [
    "event",
    "sign_up_newsletter",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "newsletter_gender": "Woman",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Page events Should map the bag event correctly 1`] = `
Array [
  Array [
    "event",
    "view_cart",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "currency": "USD",
      "from": "Bag",
      "item_list_id": "e0030b3c-b970-4496-bc72-f9a38d6270b1",
      "item_list_name": "Bag",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": undefined,
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "value": 13,
      "wishlist_id": undefined,
      "wishlist_name": undefined,
    },
  ],
  Array [
    "event",
    "page_view",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Page events Should map the search event correctly 1`] = `
Array [
  Array [
    "event",
    "search",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "search_term": "shoes",
    },
  ],
  Array [
    "event",
    "page_view",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Page events Should map the wishlist event correctly 1`] = `
Array [
  Array [
    "event",
    "view_wishlist",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "wishlist_id": "d3618128-5aa9-4caa-a452-1dd1377a6190",
    },
  ],
  Array [
    "event",
    "page_view",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Search events should not track search event with invalid search term or query, only page event. 1`] = `
Array [
  "event",
  "page_view",
  Object {
    "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
    "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
    "path_clean": "/en-pt/",
  },
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Search events should track search event search term instead of search query. 1`] = `
Array [
  "event",
  "search",
  Object {
    "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
    "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
    "path_clean": "/en-pt/",
    "search_term": "term",
  },
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Search events should track search event search without search term but with search query instead. 1`] = `
Array [
  "event",
  "search",
  Object {
    "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
    "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
    "path_clean": "/en-pt/",
    "search_term": "query",
  },
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Address Info Added event correctly 1`] = `
Array [
  Array [
    "event",
    "add_address_info",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "address_finder": undefined,
      "coupon": "ACME2019",
      "currency": "USD",
      "delivery_type": "Standard/Standard",
      "packaging_type": undefined,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "shipping_tier": "Next Day",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Checkout Abandoned event correctly 1`] = `
Array [
  Array [
    "event",
    "view_checkout_abandon_confirmation",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "checkout_step": 2,
      "coupon": "ACME2019",
      "currency": "USD",
      "delivery_type": "Standard/Standard",
      "packaging_type": "foo",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "payment_type": "credit",
      "shipping": 10,
      "shipping_tier": "Next Day",
      "tax": 2.04,
      "transaction_id": "50314b8e9bcf000000000000",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Checkout Started event correctly 1`] = `
Array [
  Array [
    "event",
    "begin_checkout",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "checkout_step": 1,
      "coupon": "ACME2019",
      "currency": "USD",
      "delivery_type": "Standard/standard",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "packaging_type": undefined,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "payment_type": "credit card",
      "shipping": 3.6,
      "shipping_tier": "Next Day",
      "tax": 2.04,
      "transaction_id": "50314b8e9bcf000000000000",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Checkout Step Editing event correctly 1`] = `
Array [
  Array [
    "event",
    "edit_checkout_step",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "checkout_step": 1,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "transaction_id": "50314b8e9bcf000000000000",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Filters Applied event correctly 1`] = `
Array [
  Array [
    "event",
    "apply_filters",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "filters": "{\\"brands\\":[2765,4062],\\"categories\\":[135973],\\"colors\\":[1],\\"discount\\":[0],\\"gender\\":[0],\\"price\\":[0,1950],\\"sizes\\":[16]}",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Filters Cleared event correctly 1`] = `
Array [
  Array [
    "event",
    "clear_filters",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "filters": "{\\"brands\\":[2765,4062],\\"categories\\":[135973],\\"colors\\":[1],\\"discount\\":[0],\\"gender\\":[0],\\"price\\":[0,1950],\\"sizes\\":[16]}",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Interact Content event correctly 1`] = `
Array [
  Array [
    "event",
    "interact_content",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "content_type": "biz",
      "interaction_type": "Click",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "some_other_property": 12312312,
      "state": "dummy",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Login event correctly 1`] = `
Array [
  Array [
    "event",
    "login",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "method": "Acme",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Order Completed event correctly 1`] = `
Array [
  Array [
    "event",
    "purchase",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "affiliation": undefined,
      "coupon": "ACME2019",
      "currency": "USD",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "shipping": 3.6,
      "tax": 2.04,
      "transaction_id": "ABC12",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Order Refunded event correctly 1`] = `
Array [
  Array [
    "event",
    "refund",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "affiliation": undefined,
      "coupon": undefined,
      "currency": "USD",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "shipping": undefined,
      "tax": undefined,
      "transaction_id": "50314b8e9bcf000000000000",
      "value": 19,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Payment Info Added event correctly 1`] = `
Array [
  Array [
    "event",
    "add_payment_info",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "coupon": "ACME2019",
      "currency": "USD",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "payment_type": "credit card",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Place Order Started event correctly 1`] = `
Array [
  Array [
    "event",
    "place_order",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "affiliation": undefined,
      "coupon": "ACME2019",
      "currency": "USD",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "shipping": 3.6,
      "tax": 2.04,
      "transaction_id": "50314b8e9bcf000000000000",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Product Added to Cart event correctly 1`] = `
Array [
  Array [
    "event",
    "add_to_cart",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "currency": "USD",
      "from": "Wishlist",
      "item_list_id": "d3618128-5aa9-4caa-a452-1dd1377a6190",
      "item_list_name": "my_wishlist",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "value": 19,
      "wishlist_id": undefined,
      "wishlist_name": undefined,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Product Added to Wishlist event correctly 1`] = `
Array [
  Array [
    "event",
    "add_to_wishlist",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "currency": "USD",
      "from": "PLP",
      "item_list_id": "/en-pt/shopping/woman",
      "item_list_name": "Woman shopping",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": undefined,
          "size": undefined,
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "value": 19,
      "wishlist_id": "d3618128-5aa9-4caa-a452-1dd1377a6190",
      "wishlist_name": undefined,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Product Clicked event correctly 1`] = `
Array [
  Array [
    "event",
    "select_item",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "from": "PLP",
      "item_list_id": "/en-pt/shopping/woman",
      "item_list_name": "Woman shopping",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "GBP",
          "discount": 6,
          "index": 3,
          "item_brand": undefined,
          "item_id": "507f1f77bcf86cd799439011",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": undefined,
          "location_id": undefined,
          "price": 25,
          "quantity": undefined,
          "size": undefined,
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Product List Viewed event correctly 1`] = `
Array [
  Array [
    "event",
    "view_item_list",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "error": undefined,
      "filters": undefined,
      "from": "PLP",
      "item_list_id": undefined,
      "item_list_name": "Woman shopping",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": 2,
          "item_brand": undefined,
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": "09a35590-bb62-4027-a630-5da04ec64fb5",
          "item_list_name": "Woman shopping",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": undefined,
          "location_id": undefined,
          "price": 25,
          "quantity": undefined,
          "size": undefined,
        },
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": 3,
          "item_brand": undefined,
          "item_id": "507f1f77bcf86cd799439012",
          "item_list_id": "09a35590-bb62-4027-a630-5da04ec64fb5",
          "item_list_name": "Woman shopping",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": undefined,
          "location_id": undefined,
          "price": 25,
          "quantity": undefined,
          "size": undefined,
        },
      ],
      "non_interaction": true,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "sort_option": undefined,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Product Removed From Wishlist event correctly 1`] = `
Array [
  Array [
    "event",
    "remove_from_wishlist",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "affiliation": undefined,
      "coupon": undefined,
      "currency": "USD",
      "discount": 6,
      "from": "PLP",
      "index": undefined,
      "item_brand": "Just A T-Shirt",
      "item_category": "Clothing",
      "item_category2": "Tops",
      "item_category3": "T-shirts",
      "item_id": "507f1f77bcf86cd799439011",
      "item_list_id": "/en-pt/shopping/woman",
      "item_list_name": "Woman shopping",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "item_variant": "Black",
      "location_id": undefined,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "price": 25,
      "quantity": undefined,
      "size": undefined,
      "value": 19,
      "wishlist_id": "d3618128-5aa9-4caa-a452-1dd1377a6190",
      "wishlist_name": undefined,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Product Removed from Cart event correctly 1`] = `
Array [
  Array [
    "event",
    "remove_from_cart",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "currency": "USD",
      "from": "Bag",
      "item_list_id": "e0030b3c-b970-4496-bc72-f9a38d6270b1",
      "item_list_name": "Bag",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": 1,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "value": 19,
      "wishlist_id": undefined,
      "wishlist_name": undefined,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Product Viewed event correctly 1`] = `
Array [
  Array [
    "event",
    "view_item",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "currency": "USD",
      "from": "PLP",
      "image_count": undefined,
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": undefined,
          "size": undefined,
        },
      ],
      "non_interaction": true,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "value": 19,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Promocode Applied event correctly 1`] = `
Array [
  Array [
    "event",
    "apply_promo_code",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "coupon": "ACME2019",
      "currency": "USD",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "transaction_id": "50314b8e9bcf000000000000",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Select Content event correctly 1`] = `
Array [
  Array [
    "event",
    "select_content",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "content_type": "biz",
      "item_id": 12312312,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Share event correctly 1`] = `
Array [
  Array [
    "event",
    "share",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "content_type": "image",
      "item_id": "123456",
      "method": "Facebook",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Shipping Info Added event correctly 1`] = `
Array [
  Array [
    "event",
    "add_shipping_info",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "address_finder": undefined,
      "coupon": "ACME2019",
      "currency": "USD",
      "delivery_type": "Standard/Standard",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": 6,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 25,
          "quantity": 1,
          "size": "L",
        },
      ],
      "packaging_type": undefined,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "shipping_tier": "Next Day",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Shipping Method Added event correctly 1`] = `
Array [
  Array [
    "event",
    "add_shipping_method",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "address_finder": undefined,
      "coupon": "ACME2019",
      "currency": "USD",
      "delivery_type": "Standard/Standard",
      "packaging_type": undefined,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "shipping_tier": "Next Day",
      "value": 24.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Sign-up Form Completed event correctly 1`] = `
Array [
  Array [
    "event",
    "sign_up",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "method": "Acme",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Track events Should map the Sign-up Newsletter event correctly 1`] = `
Array [
  Array [
    "event",
    "sign_up_newsletter",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "newsletter_gender": "Woman",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Update Product events Should trigger ga4 change_colour event 1`] = `
Array [
  Array [
    "event",
    "change_colour",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "colour": "red",
      "from": "Bag",
      "item_id": "507f1f77bcf86cd799439011",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "old_colour": "black",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Update Product events Should trigger ga4 change_quantity event 1`] = `
Array [
  Array [
    "event",
    "change_quantity",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "from": "Bag",
      "item_id": "507f1f77bcf86cd799439011",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "old_quantity": 2,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "quantity": 1,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Update Product events Should trigger ga4 change_quantity, change_quantity and change_colour event 1`] = `
Array [
  Array [
    "event",
    "change_quantity",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "from": "Bag",
      "item_id": "507f1f77bcf86cd799439011",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "old_quantity": 2,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "quantity": 1,
    },
  ],
  Array [
    "event",
    "select_size",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "from": "Bag",
      "item_id": "507f1f77bcf86cd799439011",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "old_size": "S",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "size": "L",
    },
  ],
  Array [
    "event",
    "change_colour",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "colour": "red",
      "from": "Bag",
      "item_id": "507f1f77bcf86cd799439011",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "old_colour": "black",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Update Product events Should trigger ga4 change_size event 1`] = `
Array [
  Array [
    "event",
    "change_quantity",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "from": "Bag",
      "item_id": "507f1f77bcf86cd799439011",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "old_quantity": 2,
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
      "quantity": 1,
    },
  ],
  Array [
    "event",
    "change_colour",
    Object {
      "__blackoutAnalyticsEventId": "4eabf689-96e3-4952-8176-248a848f1e1f",
      "colour": "red",
      "from": "Bag",
      "item_id": "507f1f77bcf86cd799439011",
      "item_name": "Gareth McConnell Dreamscape T-Shirt",
      "old_colour": "black",
      "page_path": "/en-pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
      "path_clean": "/en-pt/",
    },
  ],
]
`;
